# USINA-YAML

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE_OPTION_CC_BY_NC.md  README.md  ROADMAP.md  ROADMAP_FUTURE_AND_COMPETITIVE.md  ROADMAP_RESEARCH_ADDENDUM.md  SPEC.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: change_proposal.md  spec_or_docs_issue.md
.github/workflows/: ci.yml
RFC/: 0000-template.md  README.md
docs/: competitive-landscape.md  conformance-matrix.md  future-directions.md  glossary.md  naming.md
examples/: air_gen_60s.yaml  why-usina.yaml
schema/: USINA-YAML-WIZARD-MAP.md  usina.script.v1.0.schema.json
src/usina/: cli.py  core.py
src/usina/schemas/: usina.script.v1.0.schema.json
tests/: test_cli.py  test_lint_additional.py
tests/fixtures/invalid/: audio_track_out_of_bounds.usina.yaml  duration_mismatch.usina.yaml  invalid_citation_ref.usina.yaml  timeline_overlap.usina.yaml  unknown_asset_ref.usina.yaml
tests/fixtures/valid/: minimal_valid.usina.yaml
